# Team_8_Ops_Automation_Harness

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  AGENTS_IN_DEPTH.md  Canary_Integration_Guide.md  Canary_Release_Implementation_Plan.md  DEPLOYMENT_RUNBOOK.md  Dockerfile  Dockerfile.frontend  EVALUATION_IN_DEPTH.md  FAST_RLM_200_ANOMALIES_FULL_PIPELINE_REPORT.md  FAST_RLM_200_ANOMALIES_RCA_REPORT.md  FAST_RLM_BUGS_AND_SOLUTIONS.md  FAST_RLM_IN_DEPTH.md  LIVE_RUNBOOK.md  MAGELLAN_DEMO_PRESENTATION.html  Magellan-Backend-Automator.html  NUL  OCS_Feedback_Agent_Action_Plan.md  OCS_Feedback_Agent_Architecture.md  README.md  START_HERE.md  SYSTEM_ARCHITECTURE.md  anomalies.json  backend_log.txt  base_agent.py  base_agent_new.py  cmd.txt  docker-compose.yml  fast_rlm_inspection.txt  fast_rlm_troubleshooting.md  fastapi_app.py  fastrlm.py  feedback_result.json  feedback_result_runbook-814683c9-85ec-441b-9730-860af6a9454b.json  feedback_result_runbook-f9f6ba4f-854b-4fde-ad1d-4ef311588875.json  frontend_log.txt  generate_200_full_pipeline_report.py  (+44 more)
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-07-11T06-10-50-939Z.yml  page-2026-07-11T06-10-59-861Z.yml  page-2026-07-11T06-11-12-223Z.yml  page-2026-07-11T06-11-25-336Z.yml  page-2026-07-11T06-15-00-752Z.yml  page-2026-07-11T06-15-06-132Z.yml  page-2026-07-11T06-19-46-553Z.yml  page-2026-07-11T06-19-50-887Z.yml  page-2026-07-11T06-21-39-691Z.yml  page-2026-07-11T06-24-00-378Z.yml  page-2026-07-11T06-24-05-893Z.yml  page-2026-07-11T10-23-53-963Z.yml  page-2026-07-11T10-24-01-005Z.yml  (+21 more)
backend/: app.py  (+7 more)
(+544 files in other folders)
